<resources>
    <string name="app_name">bookGenie</string>
    <string name="welcomeText">Welcome to bookGenie! Discover your next favourite book.</string>
    <string name="logInButtonText">Log In</string>
    <string name="signUpButtonText">Sıgn Up</string>
    <string name="logInWelcomeBackText">Welcome Back</string>
    <string name="logInText">Log in to your account using email or social account.</string>
    <string name="signUpCreateText">Create New Account</string>
    <string name="signUpText">Enter your details to create account.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pages_text">No of Pages : %1$d</string>
    <string name="year_text">Year : %1$d</string>
    <string name="rating_text">Average Rating : %1$.1f</string>
    <string name="genres_text">Genres : %1$s</string>

    <string name="masal1">Choose what</string>
    <string name="masal2">to do today?</string>


    <string name="profile_picture_description">User Profile Picture</string>
    <string name="change_picture">Change Profile Picture</string>
    <string name="name_surname">Name Surname</string>
    <string name="email_address">E-mail Address</string>
    <string name="age">Age</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_changed_success">Password changed successfully.</string>
    <string name="passwords_do_not_match">New passwords does not match!.</string>
    <string name="fill_all_fields">Please fill in all blank spaces.</string>
    <string name="profile_updated_success">Profile updated successfully.</string>
    <string name="error_invalid_email">Unvalid e-mail address.</string>
    <string name="error_invalid_age">Unvalid age.</string>
    <string name="error_name_empty">Name cannot be blank.</string>
    <string name="profile_picture_animation_description"></string>

    <string name="profile_update_success">Profil başarıyla güncellendi.</string>
    <string name="profile_update_failed">Profil güncellenirken hata oluştu.</string>
    <string name="image_upload_success">Profil resmi yüklendi.</string>
    <string name="image_upload_failed">Resim yüklenirken hata oluştu.</string>
    <string name="password_reset_email_sent">Şifre sıfırlama e-postası gönderildi.</string>
    <string name="password_reset_email_failed">Şifre sıfırlama e-postası gönderilemedi.</string>
    <string name="select_profile_image">Profil Resmi Seç</string>
    <string name="user_info_not_found">Kullanıcı bilgileri bulunamadı.</string>
    <string name="error_loading_user_info">Bilgiler yüklenirken hata: %1$s</string>
    <string name="please_sign_in">Lütfen önce giriş yapın.</string>


    <string name="log_out">Log Out</string>
    <string name="log_out_dialog_title">Log Out</string>
    <string name="log_out_dialog_message">Are you sure you want to log out?</string>
    <string name="log_out_confirm">Log Out</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="logged_out_successfully">Logged out successfully.</string>
    <string name="select_avatar_title">Choose an avatar.</string>
    <string name="avatar_updated">Avatar updated.</string>
    <string name="avatar_update_failed">An error occurred while updating the avatar.</string>

    <string name="explore_by_genre_text">Explore by Genre</string>
    <string name="book_cover_content_description">Cover Page</string>

    <string name="delete_account_dialog_title">Delete Account?</string>
    <string name="delete_account_dialog_message">Are you sure you want to delete your account? This action is irreversible and all your data will be permanently lost.</string>
    <string name="delete_confirm">Delete</string>
    <string name="account_deleted_successfully">Account deleted successfully.</string>
    <string name="error_deleting_data">Error deleting user data: %s</string>
    <string name="error_deleting_account">Error deleting account: %s. You may need to sign in again.</string>
    <string name="user_not_logged_in">User not logged in.</string>

    <string name="dark_mode_switch">Dark Mode</string>
    <string name="notifications_switch">Notifications</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="settings_title">Settings</string>

    <string name="my_rated_books">My Rated Books</string>
    <string name="my_rated_books_count">My Rated Books (%d)</string>

    <string name="total_ratings_count_placeholder">Total Ratings: %d</string>
    <string name="no_books_rated_yet">You haven\'t rated any books yet.</string>
    <string name="could_not_load_rated_book_details">Could not load details for rated books.</string>
    <string name="error_loading_ratings">Error loading ratings.</string>
    <string name="please_sign_in_to_see_ratings">Please sign in to see your ratings.</string>
</resources>