<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp" tools:context=".UserInfoFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/profileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_rawRes="@raw/avatar_animation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" android:contentDescription="@string/profile_picture_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChangeProfilePic"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="0dp" android:layout_height="54dp" android:text="@string/change_picture"
            android:textColor="?android:attr/textColorPrimary"
            app:icon="@drawable/ic_camera"
            app:iconTint="?android:attr/textColorPrimary"
            android:fontFamily="@font/nunito_bold" android:textSize="16sp" app:cornerRadius="16dp" android:background="@drawable/rounded_background" app:layout_constraintTop_toBottomOf="@id/profileImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="60dp" android:layout_marginEnd="68dp" android:layout_marginTop="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/name_surname"
            app:layout_constraintTop_toBottomOf="@id/buttonChangeProfilePic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="64dp" android:layout_marginEnd="64dp"> <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/user_info_round"
            android:enabled="false"
            android:padding="11dp" android:textSize="15sp" android:fontFamily="@font/nunito_bold" /> </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_address"
            app:layout_constraintTop_toBottomOf="@id/tilName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="64dp" android:layout_marginEnd="64dp"> <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/user_info_round"
            android:enabled="false"
            android:padding="11dp" android:textSize="15sp" android:fontFamily="@font/nunito_bold" /> </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/age"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="64dp" android:layout_marginEnd="64dp"> <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@drawable/user_info_round"
            android:enabled="false"
            android:padding="11dp" android:textSize="15sp" android:fontFamily="@font/nunito_bold" /> </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEditProfile"
            android:layout_width="0dp"
            android:layout_height="54dp" android:text="@string/edit_profile"
            app:icon="@drawable/ic_edit"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tilAge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="60dp" android:layout_marginEnd="68dp" app:cornerRadius="16dp" app:backgroundTint="?attr/customButtonBackgroundColor"
            android:textColor="?attr/customButtonTextColor"
            app:iconTint="?attr/customButtonTextColor"
            android:fontFamily="@font/nunito_bold" /> <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSaveChanges"
        android:layout_width="0dp"
        android:layout_height="54dp" android:text="@string/save_changes"
        app:icon="@drawable/ic_save"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/buttonEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="60dp" android:layout_marginEnd="68dp" app:cornerRadius="16dp" android:fontFamily="@font/nunito_bold" /> <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonChangePassword"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="54dp" android:layout_marginTop="16dp"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_lock"
        app:iconTint="?android:attr/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/buttonSaveChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp" android:layout_marginEnd="68dp" app:cornerRadius="16dp" app:strokeColor="?android:attr/textColorPrimary" android:fontFamily="@font/nunito_bold" /> </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>