<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboardingbackground"
    tools:context=".OnboardingFragment" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="101dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/logotransparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="238dp"
        android:layout_height="114dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/libre_baskerville_bold"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/signUpButtonId1"
        android:layout_width="132dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/wine"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/signUpButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:strokeColor="@color/black"
        app:strokeWidth="2sp" />

    <Button
        android:id="@+id/logInButtonId1"
        android:layout_width="132dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/wine"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/logInButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButtonId1"
        app:strokeColor="@color/black"
        app:strokeWidth="2sp" />
</androidx.constraintlayout.widget.ConstraintLayout>