<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:backgroundTint="@color/beige"
    tools:context=".SignUpFragment">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="132dp"
        android:layout_height="54dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/wine"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/signUpButtonText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp" />

    <EditText
        android:id="@+id/usernameSignUp"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:padding="11dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:padding="11dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignUp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="228dp"
        android:layout_height="23dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/signUpText"
        android:textColor="#625D5D"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/libre_baskerville_bold"
        android:text="@string/signUpCreateText"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="213dp"
        android:layout_height="197dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/signuppagephoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>